test/negative/ClassExtendsInterface/B.java
package B;
public interface B {}
